--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ javafx {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
+    compile 'net.harawata:appdirs:1.0.3'
     compile name: 'opencv-344'
 }
 
